--- a/_posts/2019-12-22-Optics.md
+++ b/_posts/2019-12-22-Optics.md
@@ -11,3 +11,19 @@ tags:
 ---
 
 `本文正在编辑, 当前显示内容为草稿`
+
+## 一、费马原理与变折射率光学
+### 惠更斯原理
+`波前(Wavefront)` 光波面上的每一个点可以看作是一个新的次波源, 每一个次波源可以根据相位互相叠加（抵消）.
+> 惠更斯原理可以用于导出折射定律
+
+### 折射率
+定义：`n1 sin(i1) = n2 sin(i2)`
+色散：折射导致色散, 折射介质两侧折射率比值越大, 色散越明显.
+对于同一介质, 入射光波长越大（频率越低）, 其对应的折射率越小.
+
+### 频率不变性
+无论光在何种介质中传播, 其传播速度随介质的折射率改变, 但是光在某一点引起的电磁震荡频率不变(即决定光能量和颜色的是频率, 而不是波长).
+
+### 光程
+光程是的定义是 `L = n .* r`
