Final Session Series Update

--- a/_posts/2019-12-22-Optics.md
+++ b/_posts/2019-12-22-Optics.md
@@ -1,29 +1,151 @@
 ---
 layout: post
 title: "现代光学基础课程概要"
-subtitle:   "钟锡华授课"
-header-img: "resources/microcomputer.jpg"
+subtitle:   "钟锡华老师授课"
+header-img: "resources/physics.png"
 date:   2019-12-21 00:09:00 +0800
 tags:
     - Optics
     - Physics
     - MyCourses
+mathjax: true
 ---
 
 `本文正在编辑, 当前显示内容为草稿`
 
-## 一、费马原理与变折射率光学
-### 惠更斯原理
-`波前(Wavefront)` 光波面上的每一个点可以看作是一个新的次波源, 每一个次波源可以根据相位互相叠加（抵消）.
-> 惠更斯原理可以用于导出折射定律
+## 一、 费马原理与变折射率光学
+1. ***惠更斯原理***
 
-### 折射率
-定义：`n1 sin(i1) = n2 sin(i2)`
-色散：折射导致色散, 折射介质两侧折射率比值越大, 色散越明显.
-对于同一介质, 入射光波长越大（频率越低）, 其对应的折射率越小.
+    `波前(Wavefront)` 光波面上的每一个点可以看作是一个新的次波源, 每一个次波源可以根据相位互相叠加（抵消）.
 
-### 频率不变性
-无论光在何种介质中传播, 其传播速度随介质的折射率改变, 但是光在某一点引起的电磁震荡频率不变(即决定光能量和颜色的是频率, 而不是波长).
+    > 惠更斯原理可以用于导出折射定律
 
-### 光程
-光程是的定义是 `L = n .* r`
+1. ***折射率***
+  
+    定义:
+    
+    $$n_1\cdot \sin i_1 = n_2\cdot \sin i_2$$
+
+    色散：折射导致色散, 折射介质两侧折射率比值越大, 色散越明显.
+
+    对于同一介质, 入射光波长越大（频率越低）, 其对应的折射率越小.
+
+2. ***频率不变性***
+  
+    无论光在何种介质中传播, 其传播速度随介质的折射率改变, 但是光在某一点引起的电磁震荡频率不变(即决定光能量和颜色的是频率, 而不是波长).
+
+3. ***光程***
+
+    两点(a,b)之间光程是的定义是:
+    
+    $$L = \int_a^b{n}\,dr$$
+
+    其中, 积分路径是光实际经过的路径.
+
+4. ***费马原理***
+
+5. ***费马原理与成像***
+
+6. ***自然变折射率***
+
+7. ***人工变折射率/强光变折射率***
+
+8. ***光线方程***
+
+9. ***评述费马原理***
+
+## 二、 波动光学引论
+
+1. ***光是一种电磁波***
+1. ***定态光波  复振幅描述***
+1. ***波前函数***
+1. ***球面波向平面波的转化***
+1. ***光波干涉引论***
+1. ***两个点源的干涉场 杨氏实验***
+1. ***两束平行光的干涉场***
+1. ***光波衍射引论***
+1. ***圆孔和圆屏菲涅尔衍射***
+1. ***波带片***
+1. ***单缝夫琅禾费衍射***
+1. ***矩形孔和三角孔夫琅禾费衍射***
+1. ***圆孔夫琅禾费衍射 成像仪器分辨极限***
+1. ***偏振光引论***
+1. ***部分偏振光的部分相干性***
+
+## 三、 介质界面光学与近场光学显微镜
+
+1. ***菲涅尔公式***
+1. ***反射率和透射率***
+1. ***反射光的相位变化***
+1. ***反射光的偏振态***
+1. ***全反射时的透射场 - 隐失波***
+1. ***近场扫描光学显微镜***
+
+## 四、 干涉装置与光场时空相干性
+
+1. ***分波干涉装置***
+1. ***光源宽度对干涉场衬比度的影响***
+1. ***光场的空间相干性***
+1. ***薄膜干涉***
+1. ***迈克尔逊干涉仪***
+1. ***非单色性对干涉场衬比度的影响***
+1. ***傅立叶变换光谱仪***
+1. ***光场的时间相干性***
+1. ***多光束干涉 法布里-帕罗干涉仪***
+1. ***激光***
+1. ***强度相关实验 中子束干涉实验***
+
+## 五、 多元多维结构衍射与分形光学
+
+1. ***位移-相移定理***
+1. ***有序结构 一维光栅的衍射***
+1. ***光栅光谱仪 闪耀光栅***
+1. ***二维周期结构的衍射***
+1. ***三维周期结构 X射线晶体衍射***
+1. ***无规则分布的衍射***
+1. ***分形光学 - 自相似结构的衍射***
+1. ***光栅自成像***
+1. ***超短光脉冲和锁模***
+
+## 六、 傅立叶变换光学与相因子分析方法
+
+1. ***衍射系统 波前变换***
+1. ***相位衍射元件 - 透镜和棱镜***
+1. ***波前相因子分析法***
+1. ***余弦光栅的衍射场***
+1. ***夫琅禾费衍射实现屏函数的傅立叶变换***
+1. ***超精细结构的衍射 - 隐失波***
+1. ***阿贝成像原理与空间滤波实验***
+1. ***光学信息处理例举***
+1. ***泽尼克的相衬法***
+1. ***相位物可视化的其他光学方法***
+1. ***夫琅禾费衍射的普遍定义与多种装置***
+1. ***准确获得物频谱的三种系统***
+
+## 七、 光全息术
+
+1. ***全息术原理***
+1. ***各种全息图***
+1. ***全息应用简介***
+
+## 八、 光在晶体中的传播
+
+1. ***晶体双折射***
+1. ***单轴晶体光学公式 双轴晶体***
+1. ***晶体光学器件***
+1. ***圆偏振光、椭圆偏振光的产生和检验***
+1. ***偏振光干涉***
+1. ***旋光性***
+1. ***电光效应***
+1. ***偏振的矩阵表示***
+
+## 九、 吸收/色散/散射
+
+1. ***吸收***
+1. ***色散***
+1. ***经典色散理论***
+1. ***波包的群速***
+1. ***波包的展宽***
+1. ***脉冲星辐射的色散 光孤子***
+1. ***散射***
+
