video embedded for post

--- a/_posts/2020-03-02-FFmpeg.md
+++ b/_posts/2020-03-02-FFmpeg.md
@@ -13,6 +13,10 @@ tags:
 本文暂未完成编辑
 ```
 
+## 教学视频
+
+<iframe src="//player.bilibili.com/player.html?aid=93262112&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+
 ## MacOS安装FFmpeg
 
 ## 使用FFmpeg压缩视频文件
