--- a/_posts/2020-03-02-FFmpeg.md
+++ b/_posts/2020-03-02-FFmpeg.md
@@ -2,7 +2,7 @@
 layout: post
 title: "使用FFmpeg进行高效的网课录屏压缩"
 subtitle: "Compress Screen Recording Efficiently Using FFmpeg"
-header-img: "resources/physics.png"
+# header-img: "resources/physics.png"
 date: 2020-03-02 00:20:00 +0800
 tags:
     - FFmpeg
@@ -14,8 +14,7 @@ tags:
 ```
 
 ## 教学视频
-
-<iframe src="//player.bilibili.com/player.html?aid=93262112&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+<div style="width:100%; padding-top: 75%;  position:relative;"><iframe src="//player.bilibili.com/player.html?aid=93262112&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" style="width:100%; height:100%; position:absolute; top:0; left:0;"></iframe></div>
 
 ## MacOS安装FFmpeg
 
