--- a/_posts/2020-04-03-Pre20200403.md
+++ b/_posts/2020-04-03-Pre20200403.md
@@ -50,13 +50,13 @@ multilingual: false
 + 边长为 $l$ 的正方形正弦型位相光栅的复振幅透过率为:
 
     $$
-    t\left(x_{0}, y_{0}\right)=\operatorname{rect}\left(\frac{x_{0}}{l}, \frac{y_{0}}{l}\right) e^{\frac{m}{2}} \sin 2 \pi \xi_{0} x_{0}
+    t\left(x_{0}, y_{0}\right)=rect\left(\frac{x_{0}}{l}, \frac{y_{0}}{l}\right) e^{\frac{m}{2}} \sin 2 \pi \xi_{0} x_{0}
     $$
 
 + 正弦型位相光栅后表面的光场分布为:
 
     $$
-    U_{0}\left(x_{0}, y_{0}\right)=U_{i}\left(x_{0}, y_{0}\right) t\left(x_{0}, y_{0}\right)=\operatorname{rect}\left(\frac{x_{0}}{l}, \frac{y_{0}}{l}\right) e^{\frac{m}{2}} \sin 2 \pi \xi_{0} x_{0}
+    U_{0}\left(x_{0}, y_{0}\right)=U_{i}\left(x_{0}, y_{0}\right) t\left(x_{0}, y_{0}\right)=rect\left(\frac{x_{0}}{l}, \frac{y_{0}}{l}\right) e^{\frac{m}{2}} \sin 2 \pi \xi_{0} x_{0}
     $$
 
 <a name="求解衍射场分布函数"></a>
@@ -76,7 +76,7 @@ multilingual: false
 + 则光栅后表面的光场分布可写作:
 
     $$
-    U_{0}\left(x_{0}, y_{0}\right)=\operatorname{rect}\left(\frac{x_{0}}{l}, \frac{y_{0}}{l}\right) \sum_{q=-\infty}^{\infty} J_{q}\left(\frac{m}{2}\right) e^{j 2 \pi q \xi_{0} x_{0}}
+    U_{0}\left(x_{0}, y_{0}\right)=rect\left(\frac{x_{0}}{l}, \frac{y_{0}}{l}\right) \sum_{q=-\infty}^{\infty} J_{q}\left(\frac{m}{2}\right) e^{j 2 \pi q \xi_{0} x_{0}}
     $$
 
 + 正弦型位相光栅的夫琅禾费衍射场的复振幅分布
