Update to personal experience

--- a/_posts/2020-11-26-Brief.md
+++ b/_posts/2020-11-26-Brief.md
@@ -23,6 +23,7 @@ tags:
   - [CUPT `Vacuum Bazooka` contest](#CUPT `Vacuum Bazooka` contest)
 * *Sophomore Year*
   - [LBNL ATLAS Affiliate](#LBNL ATLAS Affiliate)
+  - [UCAS Summer School](#UCAS Summer School)
 * *Junior Year*
   - [Calculation Physics × MATLAB](#Calculation Physics × MATLAB)
   - [Digital Circuit course works](#Digital Circuit course works)
@@ -71,7 +72,13 @@ I affiliated in the LBNL ATLAS team in spring 2018 semester. During the affiliat
 
 I have made a report on the group meeting about this system, and the original PDF can be viewed [here](). I have also made [a clone of the website](//alms.yuxuanzhang.net), demonstrating the functionalities of the system. The website is not connected to an active experiment environment, so it has no live data stream fed in. There is also a [static website](https://alms.yuxuanzhang.net/Version-Gallery.html) showcasing the evolvements during the development.
 
-This experience is really a meaningful and crucial one for me. During the affiliation, I got a lot of chances to communicate with researchers in English, which brought significant improvements to my communicating abilities, especially in English. Additionally, by joining a research team, I have a more in-depth view of the way people cooperate in researches, which could better prepare me for my future study and research. 
+This experience is really a meaningful and crucial one for me. During the affiliation, I got a lot of chances to communicate with researchers in English, which brought significant improvements to my communicating abilities, especially in English. Additionally, by joining a research team, I have a more in-depth view of the way people cooperate in researches, which could better prepare me for my future study and research.
+
+<a name="UCAS Summer School"></a>
+
+## UCAS Summer School
+
+Placeholder
 
 # Junior Year (2019.9 - 2020.9)
 
@@ -80,6 +87,8 @@ This experience is really a meaningful and crucial one for me. During the affili
 ## Calculation Physics × MATLAB
 
 This course offered me a great chance integrating computational skills with theoretical
+
+<video src="/resources/matlab/STRING_C6.mp4" id="STRING_C6" width="100%" autoplay="autoplay" loop="loop"></video>
 
 <a name="Digital Circuit course works"></a>
 
@@ -113,9 +122,9 @@ The first time, I used a Keynote generated [PDF](//events.yuxuanzhang.net/Past_E
 
 [Image]
 
-The second time of the presentation, I broadcasted the presentation as a video. Since I cooperate with two classmates to give the second presentation, I asked them to send their material to me so that I can include each of three team member's keynote in a single video. I also made some nice little animation to demonstrate the process of a big-data algorithm. The recording of the presentation can be viewed [here](https://www.bilibili.com/video/BV1t7411U7Xx/).
+The second time of the presentation, I broadcasted the presentation as a video. Since I cooperate with two classmates to give the second presentation, I asked them to send their material to me so that I can include each of three team member's keynote in a single video. I also made some nice little animation to demonstrate the process of a big-data algorithm. The recording of the presentation can be viewed below (In Chinese).
 
-<iframe src="//player.bilibili.com/player.html?aid=98811392&bvid=BV1t7411U7Xx&cid=168672144&page=1&high_quality=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="100%" onload="resize_iframe('BD_Video', 10/16)" id="BD_Video"> </iframe>
+<video src="/resources/bigdata/pre02.m4v" poster="/resources/bigdata/pre02.png" width="100%" controls="controls" preload="preload"></video>
 
 Before the third presentation, I completed the first version of my event-live system. I edited the presentation into the event-live system compatible version, and gave the presentation using this system. It was very successful since everyone had a chance to manipulate the interactive app embedded into the presentation. The event-live system has gone through serval major updates since then, but the original content of this presentation can still be accessed [here](//events.yuxuanzhang.net/e?ID=20200406).
 
@@ -150,6 +159,10 @@ Additionally, I again used the upgraded version of event-live system to host my 
 ## Scientific Analyzer
 
 The `Scientific Analyzer` is an ongoing project. I 
+
+![Main Interface (Under development)](/resources/scientificanalyzer/SA_V0_Main.png)
+
+![Import Dialog (Under development)](/resources/scientificanalyzer/SA_V0_Import.png)
 
 <a name="VCA approximation using Quantum Espresso"></a>
 
