Prof_Apply Update

--- a/_posts/2020-11-26-Brief.md
+++ b/_posts/2020-11-26-Brief.md
@@ -7,6 +7,7 @@ date:   2020-11-26 00:10:00 +0800
 tags:
     - Personal Statement
     - Brief
+    - Fall 2020 Application
 ---
 <script>
     function resize_iframe(id, ratio = 1){
