--- a/_posts/2020-11-26-Brief.md
+++ b/_posts/2020-11-26-Brief.md
@@ -49,7 +49,7 @@ During my participation in the Robocon team, I was assigned tasks concerning the
 
 Another piece of work worth mentioning during my participation in the team is the computer vision program I made for experiment. The program, utilizing light-flow technique, could precisely locate moving objects. This program is part of the attempt to make the procedure of throwing the disk fully automatic. In detail, the robot have to face uncertain environment such as unpredictable temperature and air pressure during a certain match. In order to adjust the coefficients for a more precise aim, the robot have to be able to learn from the previous course of the disk, which requires a precise measurement of the previous thrown disk's course. This program is not included in the final solution because the team decided to take manual control for the best possible result.
 
-[Image]
+<video src="/resources/CV_Trace.mp4" width="100%" autoplay="autoplay" loop="loop" controls="controls"></video>
 
 <a name="CUPT `Vacuum Bazooka` contest"></a>
 
@@ -71,7 +71,7 @@ The detailed report can be viewed [here (Chinese)](cdn.yuxuanzhang.net).
 
 I affiliated in the LBNL ATLAS team in spring 2018 semester. During the affiliation, I was assigned the task to build a monitoring system that constantly captures the environment status and upload it to a website. This system has been used in the development of the new generation sensor chip for the LHC detector.
 
-I have made a report on the group meeting about this system, and the original PDF can be viewed [here](). I have also made [a clone of the website](//alms.yuxuanzhang.net), demonstrating the functionalities of the system. The website is not connected to an active experiment environment, so it has no live data stream fed in. There is also a [static website](https://alms.yuxuanzhang.net/Version-Gallery.html) showcasing the evolvements during the development.
+I have made a report on the group meeting about this system, and the original PDF can be viewed [here](/resources/LBNL_ATLAS_Report.pdf). I have also made [a clone of the website](//alms.yuxuanzhang.net), demonstrating the functionalities of the system. The website is not connected to an active experiment environment, so it has no live data stream fed in. There is also a [static webpage](//alms.yuxuanzhang.net/Version-Gallery.html) showcasing the evolvements during the development.
 
 This experience is really a meaningful and crucial one for me. During the affiliation, I got a lot of chances to communicate with researchers in English, which brought significant improvements to my communicating abilities, especially in English. Additionally, by joining a research team, I have a more in-depth view of the way people cooperate in researches, which could better prepare me for my future study and research.
 
@@ -79,7 +79,11 @@ This experience is really a meaningful and crucial one for me. During the affili
 
 ## UCAS Summer School
 
-Placeholder
+This summer school was held by the high-energy physics division of UCAS. During the summer school, we were shown the most recent advances in the researches, and were guided to visit the site of [BSRF](http://bsrf.ihep.cas.cn). It also worth mention that, there were also lectures introducing high performance cloud computing with root language. We were also given access to the cloud computing platform on campus.
+
+There was an assignment before we complete the summer school program. I processed the data produced by the electronic avalanche effect with python, and made a presentation as my final assignment. In detail, I used the gaussian function to convolve the original data, in order to filter out the tremendous noise, and then use the typical fitting approach to locate the center/width/amplitude of each peak. The result turned out to be satisfying. I even found a "secondary" peak hidden beneath a larger one, such peak might not be easy to spot if not employing such method.
+
+More detailed information can be found in the [report](/resources/UCAS_Report.pdf) (PDF, partially English).
 
 # Junior Year (2019.9 - 2020.9)
 
@@ -89,7 +93,11 @@ Placeholder
 
 This course offered me a great chance integrating computational skills with theoretical
 
-<video src="/resources/matlab/STRING_C6.mp4" id="STRING_C6" width="100%" autoplay="autoplay" loop="loop"></video>
+<video src="/resources/matlab/STRING_C_3.mp4" width="100%" autoplay="autoplay" loop="loop" controls="controls"></video>
+
+<video src="/resources/matlab/MCS_1.mp4" width="100%" autoplay="autoplay" loop="loop" controls="controls"></video>
+
+<video src="/resources/matlab/MCS_4.mp4" width="100%" autoplay="autoplay" loop="loop" controls="controls"></video>
 
 <a name="Digital Circuit course works"></a>
 
@@ -125,7 +133,7 @@ The first time, I used a Keynote generated [PDF](//events.yuxuanzhang.net/Past_E
 
 The second time of the presentation, I broadcasted the presentation as a video. Since I cooperate with two classmates to give the second presentation, I asked them to send their material to me so that I can include each of three team member's keynote in a single video. I also made some nice little animation to demonstrate the process of a big-data algorithm. The recording of the presentation can be viewed below (In Chinese).
 
-<video src="/resources/bigdata/pre02.m4v" poster="/resources/bigdata/pre02.png" width="100%" controls="controls" preload="preload"></video>
+<video src="/resources/bigdata/pre02.m4v" poster="/resources/bigdata/pre02.png" width="100%" controls="controls"></video>
 
 Before the third presentation, I completed the first version of my event-live system. I edited the presentation into the event-live system compatible version, and gave the presentation using this system. It was very successful since everyone had a chance to manipulate the interactive app embedded into the presentation. The event-live system has gone through serval major updates since then, but the original content of this presentation can still be accessed [here](//events.yuxuanzhang.net/e?ID=20200406).
 
@@ -159,9 +167,11 @@ Additionally, I again used the upgraded version of event-live system to host my 
 
 ## Scientific Analyzer
 
-The `Scientific Analyzer` is an ongoing project. I 
+The `Scientific Analyzer` is an ongoing project. This electron based application was designed to be capable of analyzing waves. The point is, by modulating every part of the process, customized transformations and measurements could be easily plugged in, providing infinite possibility while conserving ease of use.
 
 ![Main Interface (Under development)](/resources/scientificanalyzer/SA_V0_Main.png)
+
+The current developing version can only read wave data from files. But it is planned to add oscilloscope compatibility to the I/O interface so that this application can directly capture data from live feeds.
 
 ![Import Dialog (Under development)](/resources/scientificanalyzer/SA_V0_Import.png)
 
@@ -169,4 +179,4 @@ The `Scientific Analyzer` is an ongoing project. I
 
 ## VCA approximation using Quantum Espresso
 
-Placeholder
+`This part of experience is still being edited. Please come back later if you are interested.`
