--- a/_posts/2020-11-26-Brief.md
+++ b/_posts/2020-11-26-Brief.md
@@ -41,7 +41,7 @@ tags:
 
 ## XJTU Robocon team
 
-I was a team member of the XJTU Robocon team (2016). The objective of this team was to compete and win the [ABU-Robocon](https://en.wikipedia.org/wiki/ABU_Robocon) contest. The general goal of the 2016 contest was throwing as much disks onto the platforms as possible, as two teams compete in a match, the one with higher score wins ([details](https://en.wikipedia.org/wiki/ABU_Robocon#ABU_Robocon_2017)).
+I was a team member of the XJTU Robocon team (2016). The objective of this team was to compete and win the [ABU-Robocon](https://en.wikipedia.org/wiki/ABU_Robocon){:target="_blank"} contest. The general goal of the 2016 contest was throwing as much disks onto the platforms as possible, as two teams compete in a match, the one with higher score wins ([details](https://en.wikipedia.org/wiki/ABU_Robocon#ABU_Robocon_2017){:target="_blank"}).
 
 During my participation in the Robocon team, I was assigned tasks concerning the design and test of new mechanical structures that could help achieving the goal of the general contest. To be specific, I designed a special mechanism that utilizes its rotation momentum to throw a disk, although it was not included in the final solution for precision issues, it works smoothly and efficiently. The reasons are that the vertically thrown disk is likely to scroll down the platform instead of staying on it, and due to the asymmetry shape of the disk (top and bottom side), when thrown vertically, the disk tends to veer off course to the "top" side since it provides more aerodynamical lift.
 
@@ -55,13 +55,18 @@ Another piece of work worth mentioning during my participation in the team is th
 
 ## CUPT `Vacuum Bazooka` contest
 
-I took part in the 2016 CUPT (China Undergraduate Physics Tournament, Chinese Version of IYPT). My team chose the problem "Vacuum Bazooka", this problem concerns the procedure of a ping-pong ball being accelerated by air pressure produced by a device called "Vacuum bazooka" ([details](https://en.wikipedia.org/wiki/Vacuum_bazooka)). During the research, I designed and constructed a transparent acrylic equipment that reproduces the mechanism of the vacuum bazooka, and conducted corresponding measurements based on this piece of equipment. I recorded the firing procedure and used the same computer vision program previously developed for the ABU-Robocon contest to pinpoint and measure the acceleration of the ping-pong ball.
+I took part in the 2016 CUPT (China Undergraduate Physics Tournament, Chinese Version of IYPT). My team chose the problem "Vacuum Bazooka", this problem concerns the procedure of a ping-pong ball being accelerated by air pressure produced by a device called "Vacuum bazooka" ([details](https://en.wikipedia.org/wiki/Vacuum_bazooka){:target="_blank"}). During the research, I designed and constructed a transparent acrylic equipment that reproduces the mechanism of the vacuum bazooka, and conducted corresponding measurements based on this piece of equipment. I recorded the firing procedure and used the same computer vision program previously developed for the ABU-Robocon contest to pinpoint and measure the acceleration of the ping-pong ball.
 
 There are serval things that are remarkable in regard to my personal learning during this research. Firstly, I learned to build special equipments that could help my research in a certain way. To be specific, by utilizing transparent materials, I can better understand and measure what's happening inside the vacuum pipe, which is very crucial but could be otherwise difficult to reveal. Secondly, I learned and practiced to utilize the power of computers to help handling massive amount of data produced by modern experiment equipments. I believe, in addition to the award earned in this contest, such learnings could be very helpful for my future researches.
 
-[Image]
+<span style="background: #0005; display: block">
+![3D model rendered by SolidWorks](/resources/CUPT/Model.png)
+</span>
+<span style="color: gray; display: block; text-align: center">
+3D model of the instrument rendered by <i>SolidWorks</i>
+</span>
 
-The detailed report can be viewed [here (Chinese)](cdn.yuxuanzhang.net).
+The detailed report can be viewed [here (Chinese)](/resources/CUPT/Report.pdf){:target="_blank"}.
 
 # Sophomore Year (2017.9 - 2018.9)
 
@@ -71,7 +76,7 @@ The detailed report can be viewed [here (Chinese)](cdn.yuxuanzhang.net).
 
 I affiliated in the LBNL ATLAS team in spring 2018 semester. During the affiliation, I was assigned the task to build a monitoring system that constantly captures the environment status and upload it to a website. This system has been used in the development of the new generation sensor chip for the LHC detector.
 
-I have made a report on the group meeting about this system, and the original PDF can be viewed [here](/resources/LBNL_ATLAS_Report.pdf). I have also made [a clone of the website](//alms.yuxuanzhang.net), demonstrating the functionalities of the system. The website is not connected to an active experiment environment, so it has no live data stream fed in. There is also a [static webpage](//alms.yuxuanzhang.net/Version-Gallery.html) showcasing the evolvements during the development.
+I have made a report on the group meeting about this system, and the original PDF can be viewed [here](/resources/LBNL_ATLAS_Report.pdf){:target="_blank"}. I have also made [a clone of the website](//alms.yuxuanzhang.net){:target="_blank"}, demonstrating the functionalities of the system. The website is not connected to an active experiment environment, so it has no live data stream fed in. There is also a [static webpage](//alms.yuxuanzhang.net/Version-Gallery.html){:target="_blank"} showcasing the evolvements during the development.
 
 This experience is really a meaningful and crucial one for me. During the affiliation, I got a lot of chances to communicate with researchers in English, which brought significant improvements to my communicating abilities, especially in English. Additionally, by joining a research team, I have a more in-depth view of the way people cooperate in researches, which could better prepare me for my future study and research.
 
@@ -79,11 +84,11 @@ This experience is really a meaningful and crucial one for me. During the affili
 
 ## UCAS Summer School
 
-This summer school was held by the high-energy physics division of UCAS. During the summer school, we were shown the most recent advances in the researches, and were guided to visit the site of [BSRF](http://bsrf.ihep.cas.cn). It also worth mention that, there were also lectures introducing high performance cloud computing with root language. We were also given access to the cloud computing platform on campus.
+This summer school was held by the high-energy physics division of UCAS. During the summer school, we were shown the most recent advances in the researches, and were guided to visit the site of [BSRF](http://bsrf.ihep.cas.cn){:target="_blank"}. It also worth mention that, there were also lectures introducing high performance cloud computing with root language. We were also given access to the cloud computing platform on campus.
 
 There was an assignment before we complete the summer school program. I processed the data produced by the electronic avalanche effect with python, and made a presentation as my final assignment. In detail, I used the gaussian function to convolve the original data, in order to filter out the tremendous noise, and then use the typical fitting approach to locate the center/width/amplitude of each peak. The result turned out to be satisfying. I even found a "secondary" peak hidden beneath a larger one, such peak might not be easy to spot if not employing such method.
 
-More detailed information can be found in the [report](/resources/UCAS_Report.pdf) (PDF, partially English).
+More detailed information can be found in the [report](/resources/UCAS_Report.pdf){:target="_blank"} (PDF, partially English).
 
 # Junior Year (2019.9 - 2020.9)
 
@@ -119,7 +124,7 @@ After days of intensive coding, the first version of event-live system was compl
 
 The system was also used for other two of my presentations, and I kept updating both the server side and user side code, it is now capable of coordinating multiple lecturers and provides a canvas that can be painted by multiple users simultaneously.
 
-The system is deployed on [events.yuxuanzhang.net](//events.yuxuanzhang.net).
+The system is deployed on [events.yuxuanzhang.net](//events.yuxuanzhang.net){:target="_blank"}.
 
 <a name="Big data course works"></a>
 
@@ -127,7 +132,7 @@ The system is deployed on [events.yuxuanzhang.net](//events.yuxuanzhang.net).
 
 The full name of the course could be better translated as "Big data technology and it's application", the course talks about the techniques commonly used in the big data analysis, including its properties and usage. The instructor of this course organized three presentations for us students to showcase our own researches and thoughts upon certain topics. One thing worth mentioning is that I used different methods each time I give a presentation.
 
-The first time, I used a Keynote generated [PDF](//events.yuxuanzhang.net/Past_Event_Files/BigData_Presentation_1.pdf), and broadcasted the content through a online meeting platform. I designed the slides to be a concise one, it was a successful innovation for my self because it combines a richness of information with the ease of concentration. Few text was included in the slides while the idea remained clear and persuasive.
+The first time, I used a Keynote generated [PDF](//events.yuxuanzhang.net/Past_Event_Files/BigData_Presentation_1.pdf){:target="_blank"}, and broadcasted the content through a online meeting platform. I designed the slides to be a concise one, it was a successful innovation for my self because it combines a richness of information with the ease of concentration. Few text was included in the slides while the idea remained clear and persuasive.
 
 [Image]
 
@@ -135,7 +140,7 @@ The second time of the presentation, I broadcasted the presentation as a video. 
 
 <video src="/resources/bigdata/pre02.m4v" poster="/resources/bigdata/pre02.png" width="100%" controls="controls"></video>
 
-Before the third presentation, I completed the first version of my event-live system. I edited the presentation into the event-live system compatible version, and gave the presentation using this system. It was very successful since everyone had a chance to manipulate the interactive app embedded into the presentation. The event-live system has gone through serval major updates since then, but the original content of this presentation can still be accessed [here](//events.yuxuanzhang.net/e?ID=20200406).
+Before the third presentation, I completed the first version of my event-live system. I edited the presentation into the event-live system compatible version, and gave the presentation using this system. It was very successful since everyone had a chance to manipulate the interactive app embedded into the presentation. The event-live system has gone through serval major updates since then, but the original content of this presentation can still be accessed [here](//events.yuxuanzhang.net/e?ID=20200406){:target="_blank"}.
 
 <a name="Physics Q/A Service Volunteer"></a>
 
@@ -147,7 +152,7 @@ During the hours of my volunteering work, I not only responded to the students' 
 
 
 
-The volunteering work was evaluated in terms of "effective working hours", which converts creative work (such as the video I made) into working hours. My total working hour reported in the official record is 135 hours. The photocopy of the official proof can be downloaded as [official_proof.zip](https://cdn.yuxuanzhang.net/volunteering_official_proof.zip).
+The volunteering work was evaluated in terms of "effective working hours", which converts creative work (such as the video I made) into working hours. My total working hour reported in the official record is 135 hours. The photocopy of the official proof can be downloaded as [official_proof.zip](https://cdn.yuxuanzhang.net/volunteering_official_proof.zip){:target="_blank"}.
 
 # Senior Year (2020.9 - 2021.9)
 
@@ -161,7 +166,7 @@ I enrolled in the "Algorithm and Problem Solving" course in the fall 2020 semest
 
 As is shown above, this application has an elaborately designed graphic user interface which enables users to have insight into the procedures of graph related algorithms. This experience is also crucial to me since I have successfully utilized computer technologies to help demonstrate my ideas.
 
-Additionally, I again used the upgraded version of event-live system to host my demonstration, this time I made the slides even more friendly to both presenter and audience. The above shown app was designed to be fully compatible with the event-live system, and was integrated into the presentation hosted [here](//events.yuxuanzhang.net/e?ID=Pre20201028).
+Additionally, I again used the upgraded version of event-live system to host my demonstration, this time I made the slides even more friendly to both presenter and audience. The above shown app was designed to be fully compatible with the event-live system, and was integrated into the presentation hosted [here](//events.yuxuanzhang.net/e?ID=Pre20201028){:target="_blank"}.
 
 <a name="Scientific Analyzer"></a>
 
@@ -170,10 +175,12 @@ Additionally, I again used the upgraded version of event-live system to host my 
 The `Scientific Analyzer` is an ongoing project. This electron based application was designed to be capable of analyzing waves. The point is, by modulating every part of the process, customized transformations and measurements could be easily plugged in, providing infinite possibility while conserving ease of use.
 
 ![Main Interface (Under development)](/resources/scientificanalyzer/SA_V0_Main.png)
+*Main Interface (Under development)*
 
 The current developing version can only read wave data from files. But it is planned to add oscilloscope compatibility to the I/O interface so that this application can directly capture data from live feeds.
 
 ![Import Dialog (Under development)](/resources/scientificanalyzer/SA_V0_Import.png)
+*Import Dialog (Under development)*
 
 <a name="VCA approximation using Quantum Espresso"></a>
 
