--- a/_posts/2020-11-26-Brief.md
+++ b/_posts/2020-11-26-Brief.md
@@ -96,14 +96,34 @@ More detailed information can be found in the [report](/resources/UCAS_Report.pd
 
 ## Calculation Physics × MATLAB
 
-This course offered me a great chance integrating computational skills with theoretical
+This course offered me a great chance integrating computational skills with theoretical knowledges I collected from other physics courses. It also worth mentioning that, I performed some additional researches on the error handling algorithms when taking this course.
 
-<video src="/resources/matlab/STRING_C_3.mp4" width="100%" autoplay="autoplay" loop="loop" controls="controls"></video>
+To be specific, I first realized that, by dividing the system into smaller elements, the precision can be almost always "improved", and more indentical to the real-life experiments, as was illustrated in the demo of an oscillating string below.
 
-<video src="/resources/matlab/MCS_1.mp4" width="100%" autoplay="autoplay" loop="loop" controls="controls"></video>
+<span class="Caption">
+    <video src="/resources/matlab/Oscillating_String.mp4" width="100%" autoplay="autoplay" loop="loop" controls="controls"></video>
+    <em>Simulation of an oscilliating string, with different element precision.</em>
+</span>
 
-<video src="/resources/matlab/MCS_4.mp4" width="100%" autoplay="autoplay" loop="loop" controls="controls"></video>
+However, this kind of optimization have its own limits, since the storage and computing power of a modern computer is limited, and we cannot count on this technique when dealing with more complex systems. Therefore, I exploited the error cancallation methods based on the conservation laws of physics. When implemented correctly, the simulation works just fine with more percise results. The sample below shows a simulation on the rotating string with certain mass binded on both ends.
 
+<span class="Caption">
+    <video src="/resources/matlab/RS_NEC.mp4" width="100%" autoplay="autoplay" loop="loop" controls="controls"></video>
+    <em>Simulation with no error cancellation methods introduced.</em><br>
+    <video src="/resources/matlab/RS_Kinetic.mp4" width="100%" autoplay="autoplay" loop="loop" controls="controls"></video>
+    <em>Simulation with <i>Kinetic Conservation</i> restraint only.</em><br>
+    <video src="/resources/matlab/RS_Kinetic_AM.mp4" width="100%" autoplay="autoplay" loop="loop" controls="controls"></video>
+    <em>Simulation with both <i>Kinetic Conservation</i> and <i>Angular Momentum Conservation</i> restraint.</em>
+</span>
+
+As a further step, I implemented the simulation of multiple charged particles running free in the magnetic confinement instrument, with all above metioned error cancellation methods embeded.
+
+<span class="Caption">
+    <video src="/resources/matlab/MCS1.mp4" width="100%" autoplay="autoplay" loop="loop" controls="controls"></video>
+    <em>Simulation of an oscilliating string, with different element precision.</em><br>
+    <video src="/resources/matlab/MCS4.mp4" width="100%" autoplay="autoplay" loop="loop" controls="controls"></video>
+    <em>Simulation of an oscilliating string, with different element precision.</em><br>
+</span>
 <a name="Digital Circuit course works"></a>
 
 ## Digital Circuit course works
