--- a/_posts/2020-11-26-Brief.md
+++ b/_posts/2020-11-26-Brief.md
@@ -120,9 +120,9 @@ As a further step, I implemented the simulation of multiple charged particles ru
 
 <span class="Caption">
     <video src="/resources/matlab/MCS1.mp4" width="100%" autoplay="autoplay" loop="loop" controls="controls"></video>
-    <em>Simulation of an oscilliating string, with different element precision.</em><br>
+    <em>Simulation of magnetic confinement, with 1 pair of current rings.</em><br>
     <video src="/resources/matlab/MCS4.mp4" width="100%" autoplay="autoplay" loop="loop" controls="controls"></video>
-    <em>Simulation of an oscilliating string, with different element precision.</em><br>
+    <em>Simulation of magnetic confinement, with 2 pairs of current rings.</em><br>
 </span>
 <a name="Digital Circuit course works"></a>
 
