--- a/_posts/2020-11-26-Brief.md
+++ b/_posts/2020-11-26-Brief.md
@@ -93,12 +93,13 @@ More detailed information can be found in the [report](/resources/UCAS_Report.pd
 # Junior Year (2019.9 - 2020.9)
 
 <a name="Calculation Physics × MATLAB"></a>
+<a name="Computational Physics × MATLAB"></a>
 
-## Calculation Physics × MATLAB
+## Computational Physics × MATLAB
 
-This course offered me a great chance integrating computational skills with theoretical knowledges I collected from other physics courses. It also worth mentioning that, I performed some additional researches on the error handling algorithms when taking this course.
+This course offered me a great chance integrating computational skills with theoretical knowledge I collected from other physics courses. It also worth mentioning that, I performed some additional researches on the error handling algorithms when taking this course.
 
-To be specific, I first realized that, by dividing the system into smaller elements, the precision can be almost always "improved", and more indentical to the real-life experiments, as was illustrated in the demo of an oscillating string below.
+To be specific, I first realized that, by dividing the system into smaller elements, the precision can be almost always "improved", and more identical to the real-life experiments, as was illustrated in the demo of an oscillating string below.
 
 <span class="Caption">
     <video src="/resources/matlab/Oscillating_String.mp4" width="100%" autoplay="autoplay" loop="loop" controls="controls"></video>
