--- a/_posts/2020-11-26-Brief.md
+++ b/_posts/2020-11-26-Brief.md
@@ -5,8 +5,7 @@ subtitle:   "A brief summary of my experience on campus"
 # header-img: "img/xxx.jpg"
 date:   2020-11-26 00:10:00 +0800
 tags:
-    - Personal Statement
-    - Brief
+    - Curriculum Vitae
     - Fall 2020 Application
 ---
 <script>
