--- a/_posts/2020-11-26-Brief.md
+++ b/_posts/2020-11-26-Brief.md
@@ -44,11 +44,15 @@ I was a team member of the XJTU Robocon team (2016). The objective of this team 
 
 During my participation in the Robocon team, I was assigned tasks concerning the design and test of new mechanical structures that could help achieving the goal of the general contest. To be specific, I designed a special mechanism that utilizes its rotation momentum to throw a disk, although it was not included in the final solution for precision issues, it works smoothly and efficiently. The reasons are that the vertically thrown disk is likely to scroll down the platform instead of staying on it, and due to the asymmetry shape of the disk (top and bottom side), when thrown vertically, the disk tends to veer off course to the "top" side since it provides more aerodynamical lift.
 
-[Image]
+![Image](/resources/Robocon/Assembly.png)
+*The mechanism I designed, rendered by SolidWorks*
 
 Another piece of work worth mentioning during my participation in the team is the computer vision program I made for experiment. The program, utilizing light-flow technique, could precisely locate moving objects. This program is part of the attempt to make the procedure of throwing the disk fully automatic. In detail, the robot have to face uncertain environment such as unpredictable temperature and air pressure during a certain match. In order to adjust the coefficients for a more precise aim, the robot have to be able to learn from the previous course of the disk, which requires a precise measurement of the previous thrown disk's course. This program is not included in the final solution because the team decided to take manual control for the best possible result.
 
-<video src="/resources/CV_Trace.mp4" width="100%" autoplay="autoplay" loop="loop" controls="controls"></video>
+<span class="Caption">
+    <video src="/resources/Robocon/CV_Trace.mp4" width="100%" autoplay="autoplay" loop="loop" controls="controls"></video>
+    <em>Real-world test of this CV program.</em>
+</span>
 
 <a name="CUPT `Vacuum Bazooka` contest"></a>
 
